Fix pixels stretch bug

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,9 @@ h2 {
   background-color: #ddd;
   box-shadow: 0 0.5rem #252b35;
   border-radius: 1rem;
+
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .slider {
